# twackup-rs

./: .gitignore  .gitmodules  COPYING  Cargo.toml  Gemfile  Makefile  Makefile.toml  README.md  changelog  ffi_test.cpp  twackup.h
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: run-tests.yml
assets/: Icon.sketch  armv7-apple-ios.json
assets/database/: multiline  partially_valid  valid
gui/: Podfile
gui/Twackup/: Bridging-Header.h
gui/Twackup.xcodeproj/: project.pbxproj
gui/Twackup.xcodeproj/xcshareddata/xcschemes/: Twackup.xcscheme
gui/Twackup/Localizations/en.lproj/: Localizable.strings
gui/Twackup/Localizations/ru.lproj/: Localizable.strings
gui/Twackup/Sources/App Lifecycle/: AppDelegate.swift  SceneDelegate.swift
gui/Twackup/Sources/FFI Models/: Dpkg.swift  Utils.swift
gui/Twackup/Sources/FFI Models/Package/: FFIPackage.swift  Package.swift  PackageSection.swift
gui/Twackup/Sources/Helpers/: String.swift
gui/Twackup/Sources/Models/Database/: BuildedPackageModel.swift  Database.swift  DatabasePackage.swift  DatabasePackageModel.swift  DebPackage.swift
gui/Twackup/Sources/ViewControllers/: MainTabbarController.swift  Namespaces.swift  TwoColumnsVC.swift
gui/Twackup/Sources/ViewControllers/Package/: DatabaseDetailVC.swift  DpkgDetailVC.swift  PackageDetailViewController.swift  PackagesViewController.swift
gui/Twackup/Sources/Views/: KeyValueLabelView.swift
gui/Twackup/Sources/Views/HUD/: RJTHud.h  RJTHudProgressView.h
gui/Twackup/Sources/Views/Package/: DatabasePackageDetailedView.swift  PackageDetailView.swift  PackageTableViewCell.swift  RebuildPackageDetailedView.swift
gui/libs/: .gitignore  twackup.h
src/: builder.rs  cli_error.rs  error.rs  flock.rs  kvparser.rs  lib.rs  main.rs  package.rs  parser.rs  process.rs  progress.rs  repository.rs  tests.rs
src/builder/: archiver.rs  deb.rs  mod.rs
src/cli/: build.rs  context.rs  ios_backup.rs  leaves.rs  list.rs  mod.rs  progress_bar.rs
src/cli/backup/: export.rs  import.rs  mod.rs
src/cli/commands/: build.rs  leaves.rs  list.rs
src/cli/commands/backup/: export.rs  import.rs  mod.rs
src/cli/utils/: mod.rs
src/package/: field.rs  mod.rs  priority.rs  section.rs  state.rs
src/parser/: mod.rs  package.rs
twackup/: Cargo.toml  Makefile.toml  build.rs
twackup-cli/: Cargo.toml  Makefile.toml  build.rs
twackup-cli/src/: context.rs  error.rs  logger.rs  main.rs  paths.rs  process.rs  progress_bar.rs
twackup-cli/src/commands/: build.rs  leaves.rs  list.rs  mod.rs
twackup-cli/src/commands/backup/: export.rs  import.rs  mod.rs
twackup-cli/src/commands/backup/package_manager/: cydia.rs  mod.rs  sileo.rs  zebra.rs
twackup-cli/src/serde/: error.rs  mod.rs
twackup-cli/src/serializer/: mod.rs
twackup-derive/: Cargo.toml
twackup-derive/src/: lib.rs
twackup-derive/src/enum_derive/: mod.rs  utils.rs  with_default_field.rs  with_error.rs
twackup-derive/tests/: basic.rs
twackup-gui/: .swiftlint.yml  Makefile.toml  Podfile  entitlements.plist
twackup-gui/Twackup/: Bridging-Header.h  Info.plist  Localizable.xcstrings
twackup-gui/Twackup.xcodeproj/: project.pbxproj
twackup-gui/Twackup.xcodeproj/xcshareddata/xcschemes/: Twackup (Rootfull).xcscheme  Twackup (Rootless).xcscheme  Twackup.xcscheme
twackup-gui/Twackup.xcworkspace/: contents.xcworkspacedata
twackup-gui/Twackup.xcworkspace/xcshareddata/swiftpm/: Package.resolved
twackup-gui/Twackup/Assets.xcassets/AppIcon.appiconset/: Contents.json
twackup-gui/Twackup/Base.lproj/: Main.storyboard
twackup-gui/Twackup/Localizations/en.lproj/: Localizable.strings
twackup-gui/Twackup/Localizations/ru.lproj/: Localizable.strings
twackup-gui/Twackup/Sources/: Namespaces.swift
twackup-gui/Twackup/Sources/App Lifecycle/: AppDelegate.swift  SceneDelegate.swift
twackup-gui/Twackup/Sources/FFI Models/: Dpkg.swift  DpkgProgressNotifier.swift  FFILogger.swift  SwiftConversions.swift
twackup-gui/Twackup/Sources/FFI Models/Package/: FFIPackage.swift  PackageSection.swift
twackup-gui/Twackup/Sources/Helpers/: Bundle.swift  Collection.swift  Jailbreaks.swift  Result.swift  Sequence.swift  String.swift  UnfairLock.swift
twackup-gui/Twackup/Sources/Models/: ConsoleLogger.swift  DetailedLabelSUI.swift  DiskStats.swift  MainModel.swift  ObservedObjectProxy.swift  ProxiedObservedObject.swift  StyledLogger.swift
twackup-gui/Twackup/Sources/ViewControllers/: LogViewController+BlankSlate.swift  LogViewController+DZNEmptyDataSet.swift  LogViewController.swift  LoggerVC.swift  MainTabbarController.swift  NavigationController.swift  ScrollableViewController.swift  SettingsViewController.swift  SimpleNavController.swift  SplitController.swift  TwoColumnsVC.swift
twackup-gui/Twackup/Sources/Views/: CopyableLabel.swift  DiskSpaceUsageView.swift  KeyValueLabelView.swift  SelectionCellView.swift
twackup-gui/Twackup/include/MobileCoreServices/: LSBundleProxy.h
twackup-gui/assets/: TwackupGUI.plist
twackup/assets/: ffi_test.cpp
twackup/assets/database/: multiline  partially_valid  real-system-100  real-system-632  valid
twackup/assets/databases/: multiline  partially_valid  valid
twackup/assets/dpkg_database_dir/: status
twackup/assets/dpkg_database_dir/info/: hosts.preinst
twackup/assets/sources_db/: classic  modern
twackup/benches/: basic.rs
twackup/examples/: generate-headers.rs
twackup/src/: archiver.rs  compression.rs  error.rs  flock.rs  kvparser.rs  lib.rs  process.rs  progress.rs  repository.rs
twackup/src/builder/: deb.rs  mod.rs
twackup/src/dpkg/: lock.rs  mod.rs  paths.rs
twackup/src/ffi/: arc_container.rs  c_dpkg.rs  logger.rs  mod.rs
twackup/src/ffi/builder/: mod.rs  progress.rs
twackup/src/ffi/package/: container.rs  field.rs  mod.rs  priority.rs  section.rs  status.rs
twackup/src/package/: field.rs  mod.rs  package_error.rs  priority.rs  section.rs  state.rs  status.rs
twackup/src/package/status/: eflag.rs  mod.rs  state.rs  want.rs
twackup/src/parser/: iterators.rs  mod.rs
twackup/src/repository/: category.rs  mod.rs  repo_error.rs
(+38 files in other folders)
