[package]
name = "twackup"
version = "1.0.0-a3"
description = "Safe and fast iOS utility for rebuilding DEBs and backing up packages"
authors = ["DanP"]
edition = "2018"
publish = false
license = "GPL-3.0-only"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[package.metadata.deb_pkg]
name = "Twackup (CLI)"
identifier = "ru.danpashin.twackup"
section = "Utilities"
priority = "optional"
architecture = "iphoneos-arm"
depends = "firmware (>= 3.0)"
changelog = "changelog"
homepage = ""
assets = [
    ["build/twackup-ios", "/usr/bin/twackup"],
    ["COPYING", "/usr/share/doc/ru.danpashin.twackup/LICENSE"],
]
license_type = "GPL-3.0"

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
panic = 'abort'
debug = 0
debug-assertions = false

[profile.release.package."*"]
opt-level = 's'
codegen-units = 1
debug = 0
debug-assertions = false

[dependencies]
memmap = "^0.7"
threadpool = "^1.8"
clap = { version = "3.0.0-beta.1", default-features = false, features = ["derive", "std"] }
ansi_term = { version = "^0.12", default-features = false }
tar = { version = "^0.4", default-features = false }
ar = "^0.8"
libc = "0.2"
flate2 = { version = "^1.0", features = ["zlib"], default-features = false }
indicatif = "^0.15"
gethostname = "^0.2"
chrono = { version = "^0.4", default-features = false, features = ["clock"] }
deque = "^0.3"
num_cpus = "^1.13"
serde_any = { version = "^0.5", default-features = false, features = ["yaml", "toml", "json"] }
serde = { version = "^1.0", features = ["derive"] }
libproc = {git = "https://github.com/danpashin/libproc-rs", branch = "ios", default-features = false }
plist = { version = "^1.0", default-features = false }

[patch.crates-io]
termios = { git = "https://github.com/danpashin/termios-rs", branch = "feature/ios" }
