[package]
name = "twackup"
version = "1.0.0"
description = "Safe and fast iOS CLI utility for rebuilding DEBs and backing up packages"
authors = ["DanP"]
edition = "2021"
publish = false
license = "GPL-3.0-only"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[package.metadata.deb_pkg]
name = "Twackup (CLI)"
identifier = "ru.danpashin.twackup"
section = "Utilities"
priority = "optional"
architecture = "iphoneos-arm"
depends = "firmware (>= 3.0)"
changelog = "changelog"
homepage = ""
assets = [
    ["build/twackup-ios", "/usr/bin/twackup"],
    ["COPYING", "/usr/share/doc/ru.danpashin.twackup/LICENSE"],
]
license_type = "GPL-3.0"

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
panic = 'abort'
debug = 0
debug-assertions = false

[profile.release.package."*"]
opt-level = 's'
codegen-units = 1
debug = 0
debug-assertions = false

[dependencies]
memmap = "^0.7"
clap = { version = "3.1", default-features = false, features = ["derive", "std"] }
ansi_term = { version = "^0.12", default-features = false }
tar = { version = "^0.4", default-features = false }
ar = "0.9"
libc = "0.2"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
indicatif = "0.16.2"
gethostname = "0.2.3"
chrono = { version = "^0.4", default-features = false, features = ["clock"] }
serde_any = { version = "^0.5", default-features = false, features = ["yaml", "toml", "json"] }
serde = { version = "^1.0", features = ["derive"] }
libproc = { git = "https://github.com/danpashin/libproc-rs", branch = "0.12.0-ios", default-features = false }
plist = { version = "^1.0", default-features = false }
tokio = { version = "1.5", features = ["rt-multi-thread", "sync", "macros"] }
futures = "0.3"
async-trait = "0.1"
