[package]
name = "twackup-cli"
version = "2.0.2"
description = "Safe and fast iOS CLI utility for rebuilding DEBs and backing up packages"
edition = "2021"
publish = false
license = "GPL-3.0-only"
build = "build.rs"

[[bin]]
name = "twackup-cli"
path = "src/main.rs"

[features]
default = ["ios"]
ios = ["twackup/ios"]

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive", "string"] }
console = { version = "0.15", default-features = false, features = [] }
futures = "0.3"
gethostname = "0.4"
indicatif = { version = "0.17", default-features = false, features = [] }
libc = "0.2"
libproc = { git = "https://github.com/danpashin/libproc-rs", branch = "apple" }
log = "0.4"
plist = { version = "1.6.1", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
stderrlog = { version = "0.6.0", default-features = false, features = [] }
thiserror = "1.0"
tokio = { version = "1.38", features = ["rt-multi-thread", "sync", "macros"] }
tokio-tar = "0.3"
toml = "0.8.14"
twackup = { path = "../twackup", features = ["cli", "serde"] }

[build-dependencies]
vergen = { version = "8.3.1", features = ["cargo", "build", "git", "gitoxide"] }
