[package]
name = "twackup-derive"
version = "2.0.2"
edition = "2021"
rust-version = "1.60.0"
description = "Derive wrappers for twackup lib. Not intended to use with other crates."
license = "MIT"
homepage = "https://github.com/danpashin/twackup"

[lib]
proc-macro = true

[dependencies]
syn = "=1.0.109"
quote = "1.0"
convert_case = "0.6"
