[package]
name = "twackup"
version = "2.0.2"
description = "Tokio-based dpkg database parser and .deb packages rebuilder library"
edition = "2021"
license = "GPL-3.0-only"
rust-version = "1.70"
homepage = "https://github.com/danpashin/twackup-rs"
categories = ["filesystem", "parser-implementations"]
keywords = ["dpkg", "linux", "ios"]

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]

[features]
default = []
cli = ["console"]
ios = []
serde = ["plist", "dep:serde"]
ffi = ["safer-ffi"]
ffi-headers = ["ffi", "safer-ffi/headers"]

[[example]]
name = "generate-headers"
path = "examples/generate-headers.rs"
required-features = ["ffi-headers"]

[[bench]]
name = "basic"
harness = false

[dependencies]
ar = "0.9"
bzip2 = "0.4"
console = { version = "0.15", default-features = false, features = [], optional = true }
flate2 = "1.0"
libc = "0.2"
log = { version = "0.4", features = ["std"] }
memmap2 = "0.9.4"
memmem = "0.1"
plist = { version = "1.6.1", default-features = false, optional = true }
safer-ffi = { version = "0.1.8", features = ["proc_macros"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "1.0"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "sync", "macros", "fs"] }
tokio-tar = "0.3"
twackup-derive = { version = "2.0.2", path = "../twackup-derive" }
xz2 = "0.1"
zstd = "0.13"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }

[build-dependencies]
vergen = { version = "8.3.1", features = ["git", "gitoxide"] }
